--- a/EmpModule/webapp/i18n/i18n.properties
+++ b/EmpModule/webapp/i18n/i18n.properties
@@ -1,3 +1,3 @@
 title=Employee Information
-appTitle=PersonalView
-appDescription=App Description
+appTitle=Personal View
+appDescription=A simple demo application using SAP Cloud platform
