--- a/EmpModule/webapp/i18n/i18n.properties
+++ b/EmpModule/webapp/i18n/i18n.properties
@@ -1,3 +1,3 @@
 title=Employee Information
-appTitle=Personal View
+appTitle=Personal View mit Frank
 appDescription=A simple demo application using SAP Cloud platform
